--- a/css/application.css
+++ b/css/application.css
@@ -7,3 +7,10 @@ body { height: 100%; margin: 0; padding: 0 }
   display: block;
 }
 
+div.bar {
+  display: inline-block;
+  height: 75px;
+  width: 20px;
+  margin-right: 2px;
+  background-color: teal;
+}
