quake plot diagram has functioning scale for x, y and radius of circles setting up promise; change background to nice cream colour; bind click event to button, with functioning promise that gets json data from Iceland

--- a/css/application.css
+++ b/css/application.css
@@ -7,6 +7,10 @@ body { height: 100%; margin: 0; padding: 0 }
   display: block;
 }
 
+.container {
+  background-color: #FFFFCC;
+}
+
 div.bar {
   display: inline-block;
   height: 75px;
