--- a/css/application.css
+++ b/css/application.css
@@ -8,7 +8,7 @@ body { height: 100%; margin: 0; padding: 0 }
 }
 
 .container {
-  background-color: #FFFFCC;
+  background-color: #CCCCCC;
 }
 
 div.bar {
