--- a/css/application.css
+++ b/css/application.css
@@ -2,6 +2,11 @@
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
+.map-container {
+  width: 80%;
+  margin: 0 auto
+}
+
 .fade-in {
 	opacity: 0;
 	-webkit-animation: fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
