--- a/css/application.css
+++ b/css/application.css
@@ -2,6 +2,10 @@
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
+@-webkit-keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+@-moz-keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+@keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+
 .map-container {
   width: 80%;
   margin: 0 auto
@@ -9,11 +13,11 @@
 
 .fade-in {
 	opacity: 0;
-	-webkit-animation: fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-	-moz-animation: fadeIn ease-in 1;
-	animation: fadeIn ease-in 1;
+	-webkit-animation: fadeIn ease-in-out 1;  /* call our keyframe named fadeIn, use animattion ease-in-out and repeat it only 1 time */
+	-moz-animation: fadeIn ease-in-out 1;
+	animation: fadeIn ease-in-out 1;
 
-	-webkit-animation-fill-mode: forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+	-webkit-animation-fill-mode: forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/*/
 	-moz-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
 
@@ -39,10 +43,19 @@
   text-anchor: middle;
 }
 
+.quake-bar {
+  display: inline-block;
+}
+
 .quake-location {
-  &:nth-child(1) {
+  :hover {
+    -webkit-animation: fadeOut ease-in-out 1;
+    -moz-animation: fadeOut ease-in-out 1;
+    animation: fadeOut ease-in-out 1;
+
     -webkit-animation-delay: 2s;
     -moz-animation-delay: 2s;
     animation-delay: 2s;
   }
+
 }
