--- a/scss/application.scss
+++ b/scss/application.scss
@@ -421,3 +421,67 @@ td,
 th {
   padding: 0;
 }
+
+/* Application styling */
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+@-webkit-keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+@-moz-keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+@keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+
+.map-container {
+  width: 80%;
+  margin: 0 auto
+}
+
+.fade-in {
+	opacity: 0;
+	-webkit-animation: fadeIn ease-in-out 1;  /* call our keyframe named fadeIn, use animattion ease-in-out and repeat it only 1 time */
+	-moz-animation: fadeIn ease-in-out 1;
+	animation: fadeIn ease-in-out 1;
+
+	-webkit-animation-fill-mode: forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/*/
+	-moz-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+
+	-webkit-animation-duration: 4s;
+	-moz-animation-duration: 4s;
+	animation-duration: 4s;
+}
+
+.subunit.ISL { fill: #dcd; }
+
+.subunit-boundary {
+  fill: none;
+  stroke: #777;
+  stroke-dasharray: 2,2;
+  stroke-linejoin: round;
+}
+
+.subunit-label {
+  fill: #777;
+  fill-opacity: .5;
+  font-size: 20px;
+  font-weight: 300;
+  text-anchor: middle;
+}
+
+.quake-bar {
+  display: inline-block;
+}
+
+.quake-location {
+  &:hover {
+    -webkit-animation: fadeOut ease-in-out 1;
+    -moz-animation: fadeOut ease-in-out 1;
+    animation: fadeOut ease-in-out 1;
+
+    -webkit-animation-delay: 2s;
+    -moz-animation-delay: 2s;
+    animation-delay: 2s;
+  }
+
+}
