update map and styling to separate map from quakes, to be able to have quake spots above map. Currently divs make them separated but changing to absolute position allows overlaying

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -17,6 +17,10 @@
   margin: 0 auto;
 }
 
+.quakes-svg {
+  z-index: 2;
+}
+
 .fade-in {
 	// opacity: 0;
 	// -webkit-animation: fadeIn ease-in-out 1;
