--- a/scss/application.scss
+++ b/scss/application.scss
@@ -1,40 +1,62 @@
 @import "normalize";
 
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-@-webkit-keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
-@-moz-keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
-@keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
-
-.quake-events-navigation {
-  text-align: center;
+// @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+// @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+// @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+//
+// @-webkit-keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+// @-moz-keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+// @keyframes fadeOut { from { opacity:1; } to { opacity: 0.25; } }
+body {
+  padding: 0;
+  margin: 0;
 }
-
-.container-quakes, .map-container {
+.wrapper {
+  height: 100%;
   width: 80%;
   margin: 0 auto;
 }
 
-.quakes-svg {
-  z-index: 2;
+.quake-events-navigation {
+  text-align: center;
+  // width: 80%;
+  height: 20%;
+  // margin: 0 auto;
+  //
+  // .quakes-bar-graph {
+  //   width: 100%;
+  //   height: 100%;
+  //   padding: 20px 10px 0px;
+  // }
+
 }
 
-.fade-in {
-	// opacity: 0;
-	// -webkit-animation: fadeIn ease-in-out 1;
-	// -moz-animation: fadeIn ease-in-out 1;
-	// animation: fadeIn ease-in-out 1;
-  //
-	// -webkit-animation-fill-mode: forwards;
-	// -moz-animation-fill-mode: forwards;
-	// animation-fill-mode: forwards;
-  //
-	// -webkit-animation-duration: 4s;
-	// -moz-animation-duration: 4s;
-	// animation-duration: 4s;
-}
+// .map-container {
+//   z-index: 1;
+  // width: 80%;
+  // margin: 0 auto;
+  // position: absolute;
+
+  .map-svg {
+    width: 100%;
+    height: 100%;
+    // position: relative;
+  }
+// }
+
+// .quakes-container {
+  // z-index: 2;
+  // width: 80%;
+  // margin: 0 auto;
+  // position: relative;
+
+  .quakes-svg {
+    width: 100%;
+    height: 100%;
+    // position: relative;
+  }
+// }
+
 
 .subunit.ISL { fill: #dcd; }
 
@@ -74,6 +96,6 @@ svg {
   transition: filter 500ms;
 
   &.shadow {
-    filter: drop-shadow( -2px -2px 5px #030 );
+    filter: drop-shadow( 0px 0px 5px #000 );
   }
 }
