--- a/scss/application.scss
+++ b/scss/application.scss
@@ -12,23 +12,33 @@ body {
 }
 
 .wrapper {
-  height: 100%;
+  // height: 100%;
   width: 80%;
   margin: 0 auto;
 
-  .quake-events-navigation {
-    text-align: center;
-    height: 20%;
+  .bar-graph-container {
+    // text-align: center;
+    height: 5%;
+
+    // .quakes-bar-graph {
+    //   width: 100%;
+    //   height: 100%;
+    // }
   }
 
-  .map-svg {
-    width: 100%;
-    height: 100%;
-  }
+  .map-container {
+    // text-align: center;
+    height: 80%;
 
-  .quakes-svg {
-    width: 100%;
-    height: 100%;
+    // .map-svg {
+    //   width: 100%;
+    //   height: 100%;
+    // }
+    //
+    // .quakes-svg {
+    //   width: 100%;
+    //   height: 100%;
+    // }
   }
 }
 
