WIP add place markers for cities/towns, add colour to iceland on map in css

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,23 @@
   height: 80px;
 }
 
+.subunit.ISL { fill: #dcd; }
+
+.subunit-boundary {
+  fill: none;
+  stroke: #777;
+  stroke-dasharray: 2,2;
+  stroke-linejoin: round;
+}
+
+.subunit-label {
+  fill: #777;
+  fill-opacity: .5;
+  font-size: 20px;
+  font-weight: 300;
+  text-anchor: middle;
+}
+
 @keyframes spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
