--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,25 @@
 .App {
   width: 100%;
+  height: 100%;
   text-align: center;
 }
 
 .App-logo {
   animation: spin infinite 20s linear;
   height: 80px;
+}
+
+.Map {
+  width: 80%;
+  text-align: center;
+}
+
+.bar-graph-container {
+  height: 25%;
+}
+
+.map-container {
+  height: 75%;
 }
 
 .subunit.ISL { fill: #dcd; }
@@ -23,6 +37,7 @@
   font-size: 20px;
   font-weight: 300;
   text-anchor: middle;
+  font-family: sans-serif;
 }
 
 @keyframes spin {
