WIP tidy up scales to be usable for different svgs, swap Fragments for g elements and switch to a transition instead of animation for fade in/out effect on hover

--- a/src/App.css
+++ b/src/App.css
@@ -50,20 +50,13 @@
   font-family: sans-serif;
 }
 
-.quake-location {
+.quake-bar, .quake-location {
   fill-opacity: .75;
+  transition: fill-opacity 0.7s ease-in-out;
 }
 
-.quake-location:hover {
-  animation: fadeIn 0.5s;
-}
-
-.quake-bar {
-  fill-opacity: .75;
-}
-
-.quake-bar:hover {
-  animation: fadeIn 0.5s;
+.quake-bar:hover, .quake-location:hover {
+  fill-opacity: 1;
 }
 
 @keyframes spin {
