WIP adding y scale to bar graph
* add scale to left of graph
* basic styles
* font size not responsive

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,15 @@
 
 .bar-graph-container {
   height: 25%;
+  /* padding: 10px; */
+}
+
+.quakes-bar-graph {
+  /* margin-left: 25px; */
+}
+
+.tick {
+  
 }
 
 .map-container {
