remove commented css rules and animations; add media query for text of y scale of graph and place name labels

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 }
 
 .App-logo {
-  /* animation: spin infinite 20s linear; */
   height: 80px;
 }
 
@@ -24,7 +23,7 @@
 }
 
 .tick {
-  font-size: 1em;
+  font-size: 0em;
 }
 
 .map-container {
@@ -54,7 +53,7 @@
 .place-label {
   fill: #111;
   fill-opacity: .5;
-  font-size: 1em;
+  font-size: 0.6em;
   font-weight: 300;
   font-family: sans-serif;
 }
@@ -68,22 +67,20 @@
   fill-opacity: 1;
 }
 
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-@keyframes fadeIn {
-  from { fill-opacity: 0.75; }
-  to { fill-opacity: 1; }
-}
-
-@keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0.25; }
-}
-
-/* @media screen and (min-width(25em)) {
-  .Map {
+@media screen and (min-width: 40em) {
+  .tick {
+    font-size: 1em;
   }
-} */
+  .place-label {
+    font-size: 0.8em;
+  }
+}
+
+@media screen and (min-width: 50em) {
+  .tick {
+    font-size: 1.2em;
+  }
+  .place-label {
+    font-size: 1em;
+  }
+}
