WIP trying to get padding on quakes-bar-graph out of the way but still 3 px left on axis to sort out. Hacky changing of placement of rects and incrementing index as well as total count to give space for y axis

--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,15 @@
 
 .Map {
   width: 80%;
-  text-align: center;
+  margin: auto;
 }
 
 .bar-graph-container {
   height: 25%;
-  /* padding: 10px; */
 }
 
 .quakes-bar-graph {
-  padding: 15px 30px;
+  padding: 10px 0px 15px 25px;
 }
 
 .tick {
