--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,15 @@
   font-size: 1em;
   font-weight: 300;
   font-family: sans-serif;
+
+  &.start {
+    text-anchor: start;
+  }
+
+  &.end {
+    text-anchor: end;
+  }
+
 }
 
 .quake-bar, .quake-location {
